# santa_project

./: .pre-commit-config.yaml  LICENSE  README.md  docker-compose.yaml  go.mod  go.sum  package-lock.json
.github/workflows/: deploy.yml
backend/: .pre-commit-config.yaml  Dockerfile  alembic.ini  pyproject.toml
backend/assets/: check_lobby_websokets.html
backend/src/: main.py
backend/src/api/v1/: __init__.py
backend/src/api/v1/endpoints/: auth.py  events.py  lobbies.py  users.py
backend/src/core/: config.py  database.py  utils.py
backend/src/migrations/: env.py
backend/src/migrations/versions/: a40bae70b4c0_initial_migration.py  bb699de21a6a_add_santa_col_to_participant.py
backend/src/models/: __init__.py  base.py  event.py  lobby.py  participant.py  user.py
backend/src/schemas/: auth.py  events.py  lobbies.py  users.py
backend/src/services/: auth.py  auth_manager_service.py
docs/: endpoints.md
frontend/: .env.development  .env.production  .eslintrc.json  .stylelintrc.json  Dockerfile  eslint.config.js  index.html  nginx.conf  package-lock.json  package.json  tsconfig.app.json  tsconfig.json  tsconfig.node.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
frontend/src/: App.tsx  index.scss  main.tsx
frontend/src/api/: index.ts  mocks.ts
frontend/src/api/types/: types.ts
frontend/src/components/Authenticate/: index.module.scss  index.tsx  store.ts
frontend/src/store/: index.ts
go_backend/cmd/: main.go
go_backend/pkg/handlers/: register_user.go
go_backend/pkg/routes/: register_routes.go
(+49 files in other folders)
